<resources>
    <string name="app_name">Best Price App</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="customer">Customer</string>
    <string name="photos">Photos</string>
    <string name="semua_kategori">Semua Kategori :</string>
    <string name="semua">Semua</string>
    <string name="perempuan">Perempuan</string>
    <string name="laki_laki">Laki-Laki</string>
    <string name="photo_profile">Photo Profile</string>
    <string name="nama_customer">Nama Customer</string>
    <string name="voucher">Voucher</string>
    <string name="voucher_active">Voucher Active</string>
    <string name="ayo_berikan">Ayo Berikan</string>
    <string name="campaign_terbaikmu">Campaign Terbaikmu</string>
    <string name="campaign">campaign</string>
    <string name="add_campaign">Add Campaign</string>
    <string name="name_campaign">Name Campaign</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="description_campaign">Description Campaign</string>
    <string name="save">Save</string>
    <string name="title_voucher">Voucher</string>
    <string name="title_product">Product</string>
    <string name="title_customer">Customer</string>
    <string name="title_campaign">Campaign</string>
    <string name="gambar_campaign">Gambar Campaign</string>
    <string name="campaign_tersedia">Campaign Tersedia</string>
    <string name="tambah_campaign">Tambah Campaign</string>
    <string name="halaman_forecast">Halaman Forecast</string>
    <string name="nama_campaign">Nama Campaign</string>
    <string name="beli_kebutuhan_lebaran_dengan_berbagai_macam_promo_dan_juga_voucher_cashback"> Beli Kebutuhan Keperluan Dengan Berbagai Macam Promo dan Juga Voucher Cashback</string>
    <string name="retry">retry</string>
    <string name="id">id</string>
    <string name="back">Back</string>
    <string-array name="product_category">
        <item>Bed Bath Table</item>
        <item>Health Beauty</item>
        <item>Sports Leisure</item>
        <item>Furniture Decor</item>
        <item>Computer Accessories</item>
        <item>Housewares</item>
        <item>Watches Gifts</item>
        <item>Telephony</item>
        <item>Garden Tools</item>
        <item>Auto</item>
    </string-array>
    <string-array name="product_category_all">
        <item>All</item>
        <item>Bed Bath Table</item>
        <item>Health Beauty</item>
        <item>Sports Leisure</item>
        <item>Furniture Decor</item>
        <item>Computer Accessories</item>
        <item>Housewares</item>
        <item>Watches Gifts</item>
        <item>Telephony</item>
        <item>Garden Tools</item>
        <item>Auto</item>
    </string-array>
</resources>