<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_product">

    <fragment
        android:id="@+id/navigation_product"
        android:name="com.traveloka.bestpriceapp.ui.product.fragment.ProductFragment"
        android:label="@string/title_product"
        tools:layout="@layout/fragment_product" />

    <fragment
        android:id="@+id/navigation_voucher"
        android:name="com.traveloka.bestpriceapp.ui.voucher.fragment.VoucherFragment"
        android:label="@string/title_voucher"
        tools:layout="@layout/fragment_voucher"/>

    <fragment
        android:id="@+id/navigation_customer"
        android:name="com.traveloka.bestpriceapp.ui.customer.fragment.CustomerFragment"
        android:label="@string/title_customer"
        tools:layout="@layout/fragment_customer" />

    <fragment
        android:id="@+id/navigation_campaign"
        android:name="com.traveloka.bestpriceapp.ui.campaign.fragment.CampaignFragment"
        android:label="@string/title_campaign"
        tools:layout="@layout/fragment_campaign" />

</navigation>